# user_bot

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20240521_01_initial_schema.py  20240601_01_add_api_token_to_bots.py  20240601_02_remove_admin_chats_table.py  20240620_03_identity_verification.py  20240702_04_submission_quote_author.py
bot_platform/: __init__.py  config.py  database.py  logging_config.py  models.py  rate_limiting.py
bot_platform/models/: __init__.py  audit.py  base.py  bot.py  enums.py  persona.py  submission.py
bot_platform/scripts/: __init__.py  bootstrap_operator_bot.py
bot_platform/services/: __init__.py  bots.py  identities.py  moderation.py  personas.py  quotes.py  subscriptions.py
bot_platform/telegram/: __init__.py  dispatcher.py  states.py  webhooks.py
deploy/: .env.production
deploy/nginx/: bot.content.run.place.conf
docs/: subscriptions.md
tests/: conftest.py  test_chat_response_cache.py  test_database_pre_ping.py  test_dispatcher_utils.py  test_enum_serialisation.py  test_identity_management.py  test_identity_verification.py  test_quote_selection.py  test_quote_statistics.py  test_submission_merging.py
