[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-platform"
version = "0.1.0"
description = "Multi-bot Telegram quote platform"
authors = [{name = "User"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "SQLAlchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "coverage>=7.4.4",
    "ruff>=0.3.4",
    "mypy>=1.9.0"
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # błędy PEP8
    "F",  # potencjalne błędy w Pythonie
    "B",  # bugi z flake8-bugbear
    "I",  # sortowanie importów
]
ignore = [
    "E402",  # dopuszczamy importy po innych instrukcjach w plikach konfiguracyjnych
]

[tool.ruff.lint.isort]
known-first-party = ["bot_platform"]
